package app.entities;/* @auther: Frederik Dupont */

public class User {
private int Username;

}
