@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana
hide circles
hide methods

class Order
class Carport
class User
class Admin
class Stykliste
class Materiale



User"1" --"*" Order
Order "1"--"1" Stykliste
Order "1"-- "1"Carport
Admin"*" -- "*"Order
Stykliste"*"--"*"Materiale

class Admin{
email
password
}
class Carport{
width
length
roof
}
class User{
email
password
phone number
address
}
class Order{
price
status
shipping address
order id
}
class Admin{
}

@enduml